--- a/jackson-support/pom.xml
+++ b/jackson-support/pom.xml
@@ -29,6 +29,7 @@
 
     <properties>
         <version.lib.common-api>0.9.2-SNAPSHOT</version.lib.common-api>
+        <version.lib.common-impl>0.9.2-SNAPSHOT</version.lib.common-impl>
     </properties>
 
     <dependencies>
@@ -36,6 +37,11 @@
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
             <version>${version.lib.common-api}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.ma1uta.matrix</groupId>
+            <artifactId>common-impl</artifactId>
+            <version>${version.lib.common-impl}</version>
         </dependency>
 
         <dependency>
@@ -45,6 +51,10 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.ws.rs</groupId>
