--- a/pom.xml
+++ b/pom.xml
@@ -304,10 +304,10 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-            </plugin>
+            </plugin-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
@@ -534,7 +534,5 @@
         <module>bot-impl</module>
         <module>jackson-support</module>
         <module>jsonb-support</module>
-        <module>client-jaxrs</module>
-<!--        <module>rest-client</module>-->
     </modules>
 </project>
