--- a/client-impl/pom.xml
+++ b/client-impl/pom.xml
@@ -31,7 +31,9 @@
     <properties>
         <version.lib.client-api>0.9.2-SNAPSHOT</version.lib.client-api>
         <version.lib.common-impl>0.9.2-SNAPSHOT</version.lib.common-impl>
-        <version.lib.resteasy>4.3.0.Final</version.lib.resteasy>
+        <version.lib.jackson-support>0.9.2-SNAPSHOT</version.lib.jackson-support>
+        <version.lib.logback-classic>1.2.3</version.lib.logback-classic>
+        <version.lib.resteasy>4.3.1.Final</version.lib.resteasy>
         <version.lib.wiremock>2.24.1</version.lib.wiremock>
     </properties>
 
@@ -87,13 +89,13 @@
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>jackson-support</artifactId>
-            <version>0.9.2-SNAPSHOT</version>
+            <version>${version.lib.jackson-support}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>${version.lib.logback-classic}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -126,11 +128,29 @@
                     <groupId>com.github.jknack</groupId>
                     <artifactId>handlebars</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--illegal-access=permit
+                        --add-opens matrix.client.impl/io.github.ma1uta.matrix.client=ALL-UNNAMED
+                        --add-opens matrix.client.impl/io.github.ma1uta.matrix.client.rest=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
