--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -29,6 +29,7 @@
 
     <properties>
         <version.lib.common-api>0.9.2-SNAPSHOT</version.lib.common-api>
+        <version.lib.common-impl>0.9.2-SNAPSHOT</version.lib.common-impl>
         <version.lib.jakarta.json-api>1.1.5</version.lib.jakarta.json-api>
         <version.lib.yasson>1.0.4</version.lib.yasson>
         <version.lib.mapstruct>1.3.0.Final</version.lib.mapstruct>
@@ -40,6 +41,11 @@
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
             <version>${version.lib.common-api}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.ma1uta.matrix</groupId>
+            <artifactId>common-impl</artifactId>
+            <version>${version.lib.common-impl}</version>
         </dependency>
         <dependency>
             <groupId>javax.json.bind</groupId>
