--- a/client-impl/pom.xml
+++ b/client-impl/pom.xml
@@ -33,8 +33,8 @@
         <version.lib.common-impl>0.9.2-SNAPSHOT</version.lib.common-impl>
         <version.lib.jackson-support>0.9.2-SNAPSHOT</version.lib.jackson-support>
         <version.lib.logback-classic>1.2.3</version.lib.logback-classic>
-        <version.lib.resteasy>4.3.1.Final</version.lib.resteasy>
-        <version.lib.wiremock>2.24.1</version.lib.wiremock>
+        <version.lib.resteasy>4.4.2.Final</version.lib.resteasy>
+        <version.lib.wiremock>2.26.0</version.lib.wiremock>
     </properties>
 
     <dependencies>
@@ -63,12 +63,6 @@
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jackson2-provider</artifactId>
             <version>${version.lib.resteasy}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-launcher</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -103,40 +97,6 @@
             <artifactId>wiremock</artifactId>
             <version>${version.lib.wiremock}</version>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.xml.bind</groupId>
-                    <artifactId>jaxb-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-annotations</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.ow2.asm</groupId>
-                    <artifactId>asm</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.github.jknack</groupId>
-                    <artifactId>handlebars</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
     <build>
@@ -145,10 +105,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--illegal-access=permit
-                        --add-opens matrix.client.impl/io.github.ma1uta.matrix.client=ALL-UNNAMED
-                        --add-opens matrix.client.impl/io.github.ma1uta.matrix.client.rest=ALL-UNNAMED
-                    </argLine>
+                    <forkCount>0</forkCount> <!-- FIXME: -->
                 </configuration>
             </plugin>
             <plugin>
