--- a/jackson-support/pom.xml
+++ b/jackson-support/pom.xml
@@ -30,6 +30,7 @@
     <properties>
         <version.lib.common-api>0.9.2-SNAPSHOT</version.lib.common-api>
         <version.lib.common-impl>0.9.2-SNAPSHOT</version.lib.common-impl>
+        <version.lib.jaxb-api>2.3.1</version.lib.jaxb-api>
     </properties>
 
     <dependencies>
@@ -55,6 +56,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${version.lib.jaxb-api}</version>
         </dependency>
         <dependency>
             <groupId>javax.ws.rs</groupId>
