--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,11 @@
 
         <!-- plugins versions -->
         <version.plugin.maven-compiler-plugin>3.8.0</version.plugin.maven-compiler-plugin>
-        <version.plugin.maven-checkstyle-plugin>3.0.0</version.plugin.maven-checkstyle-plugin>
+        <version.plugin.maven-checkstyle-plugin>3.1.0</version.plugin.maven-checkstyle-plugin>
         <version.plugin.maven-gpg-plugin>1.6</version.plugin.maven-gpg-plugin>
         <version.plugin.nexus-staging-maven-plugin>1.6.8</version.plugin.nexus-staging-maven-plugin>
         <version.plugin.jacoco-maven-plugin>0.8.2</version.plugin.jacoco-maven-plugin>
-        <version.plugin.maven-surefire-plugin>2.22.0</version.plugin.maven-surefire-plugin>
+        <version.plugin.maven-surefire-plugin>3.0.0-M4</version.plugin.maven-surefire-plugin>
         <version.plugin.maven-failsafe-plugin>2.22.0</version.plugin.maven-failsafe-plugin>
         <version.plugin.maven-source-plugin>3.0.1</version.plugin.maven-source-plugin>
         <version.plugin.maven-javadoc-plugin>3.1.0</version.plugin.maven-javadoc-plugin>
@@ -84,21 +84,21 @@
         <version.plugin.maven-enforcer-plugin>3.0.0-M2</version.plugin.maven-enforcer-plugin>
 
         <!-- plugin dependencies -->
-        <version.lib.checkstyle>8.23</version.lib.checkstyle>
+        <version.lib.checkstyle>8.29</version.lib.checkstyle>
 
         <!-- dependencies -->
-        <version.lib.slf4j-api>1.7.26</version.lib.slf4j-api>
-        <version.lib.jackson-databind>2.9.10</version.lib.jackson-databind>
-        <version.lib.jackson-module-jaxb-annotations>2.9.10</version.lib.jackson-module-jaxb-annotations>
-        <version.lib.jackson-jaxrs-json-provider>2.9.10</version.lib.jackson-jaxrs-json-provider>
-        <version.lib.jakarta.persistence-api>2.2.2</version.lib.jakarta.persistence-api>
-        <version.lib.junit-bom>5.5.2</version.lib.junit-bom>
-        <version.lib.jersey-client>2.29.1</version.lib.jersey-client>
-        <version.lib.jersey.hk2>2.29.1</version.lib.jersey.hk2>
-        <version.lib.jersey-media-json-jackson>2.29.1</version.lib.jersey-media-json-jackson>
-        <version.lib.microprofile>3.0</version.lib.microprofile>
+        <version.lib.slf4j-api>1.7.30</version.lib.slf4j-api>
+        <version.lib.jackson-databind>2.10.2</version.lib.jackson-databind>
+        <version.lib.jackson-module-jaxb-annotations>2.10.2</version.lib.jackson-module-jaxb-annotations>
+        <version.lib.jackson-jaxrs-json-provider>2.10.2.1</version.lib.jackson-jaxrs-json-provider>
+        <version.lib.jakarta.persistence-api>2.2.3</version.lib.jakarta.persistence-api>
+        <version.lib.junit-bom>5.6.0</version.lib.junit-bom>
+        <version.lib.jersey-client>2.30</version.lib.jersey-client>
+        <version.lib.jersey.hk2>2.30</version.lib.jersey.hk2>
+        <version.lib.jersey-media-json-jackson>2.30</version.lib.jersey-media-json-jackson>
+        <version.lib.microprofile>3.2</version.lib.microprofile>
 
-        <version.lib.asm>7.1</version.lib.asm>
+        <version.lib.asm>7.3.1</version.lib.asm>
     </properties>
 
     <build>
