--- a/client-impl/pom.xml
+++ b/client-impl/pom.xml
@@ -23,10 +23,10 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.9.2-SNAPSHOT</version>
+        <version>0.10.0</version>
     </parent>
     <artifactId>client-impl</artifactId>
-    <version>0.9.2-SNAPSHOT</version>
+    <version>0.10.0</version>
 
     <properties>
         <version.lib.client-api>0.9.2-SNAPSHOT</version.lib.client-api>
