--- a/bot-impl/pom.xml
+++ b/bot-impl/pom.xml
@@ -26,17 +26,12 @@
         <version>0.10.0</version>
     </parent>
     <artifactId>bot-impl</artifactId>
-    <version>0.10.0</version>
-
-    <properties>
-        <version.lib.client-impl>0.9.2-SNAPSHOT</version.lib.client-impl>
-    </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>client-impl</artifactId>
-            <version>${version.lib.client-impl}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
