--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -19,33 +19,24 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
         <version>0.10.0</version>
     </parent>
     <artifactId>jsonb-support</artifactId>
-    <version>0.10.0</version>
-
-    <properties>
-        <version.lib.common-api>0.9.2-SNAPSHOT</version.lib.common-api>
-        <version.lib.common-impl>0.9.2-SNAPSHOT</version.lib.common-impl>
-        <version.lib.jakarta.json-api>1.1.6</version.lib.jakarta.json-api>
-        <version.lib.yasson>1.0.6</version.lib.yasson>
-        <version.lib.mapstruct>1.3.1.Final</version.lib.mapstruct>
-        <version.lib.commons-beanutils>1.9.4</version.lib.commons-beanutils>
-    </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
-            <version>${version.lib.common-api}</version>
+            <version>${version.lib.jeon}</version>
         </dependency>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-impl</artifactId>
-            <version>${version.lib.common-impl}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.json.bind</groupId>
