--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
 jdk:
   - openjdk8
-  - openjdk11
+  - openjdk11  # fail jsonb-support due to https://github.com/mapstruct/mapstruct-examples/issues/69
+  - openjdk13
