--- a/jmsdk-bom/pom.xml
+++ b/jmsdk-bom/pom.xml
@@ -49,6 +49,7 @@
         <version.lib.jaxb-api>2.3.1</version.lib.jaxb-api>
         <version.lib.resteasy>4.4.2.Final</version.lib.resteasy>
         <version.lib.wiremock>2.26.0</version.lib.wiremock>
+        <version.lib.javax-annotation-api>1.3.2</version.lib.javax-annotation-api>
     </properties>
 
     <dependencyManagement>
@@ -164,6 +165,12 @@
                 <artifactId>mapstruct</artifactId>
                 <version>${version.lib.mapstruct}</version>
             </dependency>
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${version.lib.javax-annotation-api}</version>
+            </dependency>
+
             <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
