--- a/pom.xml
+++ b/pom.xml
@@ -236,9 +236,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${version.plugin.maven-surefire-plugin}</version>
-                    <configuration>
-                        <argLine>--illegal-access=permit</argLine>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -276,7 +273,6 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <argLine>--illegal-access=permit</argLine>
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
@@ -444,6 +440,24 @@
                                     <version>${version.lib.asm}</version> <!-- Use newer version of ASM -->
                                 </dependency>
                             </dependencies>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-failsafe-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <goals>
+                                        <goal>integration-test</goal>
+                                        <goal>verify</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                            <configuration>
+                                <argLine>--illegal-access=permit</argLine>
+                                <includes>
+                                    <include>**/*Test.java</include>
+                                </includes>
+                            </configuration>
                         </plugin>
                     </plugins>
                 </pluginManagement>
