--- a/common-impl/pom.xml
+++ b/common-impl/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.12.0-SNAPSHOT</version>
+        <version>0.11.1-SNAPSHOT</version>
     </parent>
     <artifactId>common-impl</artifactId>
 
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>io.github.ma1uta.matrix</groupId>
                 <artifactId>jmsdk-bom</artifactId>
-                <version>0.12.0-SNAPSHOT</version>
+                <version>0.11.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -64,6 +64,10 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.ma1uta.matrix</groupId>
+            <artifactId>common-api</artifactId>
         </dependency>
     </dependencies>
 
