--- a/bot-impl/pom.xml
+++ b/bot-impl/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.11.2</version>
+        <version>0.12.0-SNAPSHOT</version>
     </parent>
     <artifactId>bot-impl</artifactId>
 
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>io.github.ma1uta.matrix</groupId>
                 <artifactId>jmsdk-bom</artifactId>
-                <version>0.11.2</version>
+                <version>0.12.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
