--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.12.0</version>
+    <version>0.13.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -37,7 +37,7 @@
         <url>https://github.com/ma1uta/jmsdk</url>
         <developerConnection>scm:git:ssh://github.com/ma1uta/jmsdk</developerConnection>
         <connection>scm:git:git://github.com/ma1uta/jmsdk</connection>
-      <tag>0.12.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <developers>
