--- a/jmsdk-bom/pom.xml
+++ b/jmsdk-bom/pom.xml
@@ -29,26 +29,26 @@
     <description>Java-based Matrix server. All dependencies.</description>
 
     <properties>
-        <version.lib.jeon>0.12.0</version.lib.jeon>
+        <version.lib.jeon>0.13.0-SNAPSHOT</version.lib.jeon>
         <version.lib.commons-beanutils>1.9.4</version.lib.commons-beanutils>
         <version.lib.logback-classic>1.2.3</version.lib.logback-classic>
         <version.lib.slf4j-api>1.7.30</version.lib.slf4j-api>
-        <version.lib.jackson-annotations>2.10.2</version.lib.jackson-annotations>
-        <version.lib.jackson-databind>2.10.2</version.lib.jackson-databind>
-        <version.lib.jackson-module-jaxb-annotations>2.10.2</version.lib.jackson-module-jaxb-annotations>
-        <version.lib.jackson-jaxrs-json-provider>2.10.2.1</version.lib.jackson-jaxrs-json-provider>
+        <version.lib.jackson-annotations>2.11.2</version.lib.jackson-annotations>
+        <version.lib.jackson-databind>2.11.2</version.lib.jackson-databind>
+        <version.lib.jackson-module-jaxb-annotations>2.11.2</version.lib.jackson-module-jaxb-annotations>
+        <version.lib.jackson-jaxrs-json-provider>2.11.2</version.lib.jackson-jaxrs-json-provider>
         <version.lib.jakarta.json-api>1.1.6</version.lib.jakarta.json-api>
         <version.lib.jakarta.persistence-api>2.2.3</version.lib.jakarta.persistence-api>
         <version.lib.junit-bom>5.6.0</version.lib.junit-bom>
         <version.lib.jersey-client>2.30</version.lib.jersey-client>
         <version.lib.jersey.hk2>2.30</version.lib.jersey.hk2>
         <version.lib.jersey-media-json-jackson>2.30</version.lib.jersey-media-json-jackson>
-        <version.lib.microprofile>3.2</version.lib.microprofile>
+        <version.lib.microprofile>3.3</version.lib.microprofile>
         <version.lib.mapstruct>1.3.1.Final</version.lib.mapstruct>
         <version.lib.yasson>1.0.6</version.lib.yasson>
         <version.lib.jaxb-api>2.3.1</version.lib.jaxb-api>
         <version.lib.resteasy>4.4.2.Final</version.lib.resteasy>
-        <version.lib.wiremock>2.26.0</version.lib.wiremock>
+        <version.lib.wiremock>2.27.1</version.lib.wiremock>
         <version.lib.javax-annotation-api>1.3.2</version.lib.javax-annotation-api>
     </properties>
 
