OSGi: added capability headers to MANIFEST.MF to support SPI
* Enabled the OSGi ServiceLoader Mediator facility
* Added Provide-Capability headers for SPI providers
* Added Require-Capability headers for SPI consumers (single provider allowed)
* Kept JSON provider requirements optional (default fallbacks available)

--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -98,6 +98,14 @@
                 <configuration>
                     <instructions>
                         <Automatic-Module-Name>matrix.support.jsonb</Automatic-Module-Name>
+                        <Require-Capability>
+                            osgi.extender; filter:="(osgi.extender=osgi.serviceloader.registrar)",
+                            osgi.serviceloader; filter:="(osgi.serviceloader=io.github.ma1uta.matrix.support.jsonb.JsonbProvider)"; resolution:=optional
+                        </Require-Capability>
+                        <Provide-Capability>
+                            osgi.serviceloader; osgi.serviceloader=io.github.ma1uta.matrix.impl.Deserializer,
+                            osgi.serviceloader; osgi.serviceloader=io.github.ma1uta.matrix.impl.RestClientBuilderConfigurer
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
