--- a/jackson-support/pom.xml
+++ b/jackson-support/pom.xml
@@ -99,6 +99,14 @@
                 <configuration>
                     <instructions>
                         <Automatic-Module-Name>matrix.support.jackson</Automatic-Module-Name>
+                        <Require-Capability>
+                            osgi.extender; filter:="(osgi.extender=osgi.serviceloader.registrar)",
+                            osgi.serviceloader; filter:="(osgi.serviceloader=io.github.ma1uta.matrix.support.jackson.ObjectMapperProvider)"; resolution:=optional
+                        </Require-Capability>
+                        <Provide-Capability>
+                            osgi.serviceloader; osgi.serviceloader=io.github.ma1uta.matrix.impl.Deserializer,
+                            osgi.serviceloader; osgi.serviceloader=io.github.ma1uta.matrix.impl.RestClientBuilderConfigurer
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
